# RE216_application_chat

./: .gitignore  CMakeLists.txt  README.md  create-project-files.sh
sources/: CMakeLists.txt
sources/jalon01/: client.c  server.c
sources/jalon02/: CMakeLists.txt
sources/jalon02/src/: CMakeLists.txt  client.c  server.c
sources/jalon02/src/include/: CMakeLists.txt  general_tools.c  general_tools.h
sources/jalon02/src/include/client/: CMakeLists.txt  client.h  client_tools.c  client_tools.h
sources/jalon02/src/include/server/: server_tools.c  server_tools.h
sources/jalon03/src/: CMakeLists.txt  client.c  server.c
sources/jalon03/src/include/: general_tools.c  general_tools.h
sources/jalon03/src/include/client/: client_tools.c
sources/jalon03/src/include/server/: server_tools.c  server_tools.h
sources/jalon04/: CMakeLists.txt
sources/jalon04/src/: CMakeLists.txt  client.c  server.c
sources/jalon04/src/include/: general_tools.c  general_tools.h
sources/jalon04/src/include/client/: client_tools.c  client_tools.h
sources/jalon04/src/include/server/: server_tools.c  server_tools.h  server_tools_channels.h  server_tools_users.c  server_tools_users.h
sources/jalon05/src/: CMakeLists.txt  client.c  server.c
sources/jalon05/src/include/: general_tools.c  general_tools.h
sources/jalon05/src/include/client/: client_tools.c  client_tools.h
sources/jalon05/src/include/server/: server_tools.c  server_tools.h  server_tools_channels.c  server_tools_channels.h  server_tools_users.c  server_tools_users.h
src/: CMakeLists.txt
src/jalon01/: CMakeLists.txt  client.c  server.c
